public/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,800;1,900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
@import 'switch-toggle.css';
@import 'button.css';

/* ========= */
/* Variables */
/* ========- */
:root {
  --dark-colour-level-one: #121212;
  --dark-colour-level-two: #191818;
  --dark-colour-level-three: #1E1E1E;
  --dark-colour-shadow: #00000032;
}

/* ======== */
/* Elements */
/* ======== */
*, *::before, *::after {
  box-sizing: inherit;
}

p {
  font-family: 'Open Sans', sans-serif;
}

body {
  margin: 0;
  box-sizing: border-box;
  font-family: 'Montserrat', sans-serif;
  color: white;
  background-color: var(--dark-colour-level-one);
  display: grid;
  grid-template-columns: 40px 1fr 40px;
}

body > * {
  grid-column: 2;
}

h1, h2, h3, h4 {
  font-weight: 300;
  margin: 0;
}

ul {
  margin: 0;
  padding: 0;
  text-decoration: none;
  list-style-type: none;
}

b {
  font-weight: 900;
}

/* ============= */
/* Common Styles */
/* ============= */
.page-section {
  padding-top: 50px;
  display: grid;
  grid-template-columns: auto;
  gap: 2em;
  justify-items: center;
}

.page-section > * {
  background-color: var(--dark-colour-level-two);
  border-radius: 30px;
  box-shadow: 0px 10px 6px -6px var(--dark-colour-shadow);
  padding: 1em;
}

/* ============== */
/* Navigation Bar */
/* ============== */
.navbar {
  display: flex;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 900;
  width: 100%;
  height: 50px;
  background-color: var(--dark-colour-level-three);
  align-items: center;
  justify-content: space-between;
  box-shadow: 0px 10px 6px -6px var(--dark-colour-shadow);
}

.switch-toggle {
  margin-left: 1em;
}

.hamburger-menu {
  margin-right: 1em;
}

.navbar > ul {
  display: none;
  text-decoration: none;
  list-style-type: none;
}

.navbar > ul > li > a {
  text-decoration: none;
  color: white;
}

/* ====== */
/* Header */
/* ====== */
#home {
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.header-container {
  display: flex;
  flex-direction: column;
  padding: 5px;
}

.header-container > * {
  margin: 5px;
}

.head-subtitle, .action-button {
  align-self: center;
}

/* ======== */
/* About Me */
/* ======== */
.section-title {
  text-transform: uppercase;
  font-style: italic;
  text-decoration: underline;
  font-weight: bolder;
  font-size: 2em;
  background-color: unset ;
  border-radius: 0 ;
  box-shadow: unset ;
  padding: 0 ;
}

.about-me-image {
  background-color: unset;
  padding: 0;
  width: 100%;
}

.about-me-external-links-container {
  display: flex;
  justify-content: center;
  width: 100%;
}

.links-grid {
  display: grid;
  grid-template-columns: 50px 1fr;
  gap: 1em;
  width: 100%;
}

.links-grid :nth-child(odd) {
  justify-self: center;
}

.links-grid :nth-child(even) {
  justify-self: start;
}

.about-me-external-links-container a {
  text-decoration: none;
  color: white;
}

.links-grid > .action-button {
  grid-column: 1 / -1;
  width: 100%;
}

.about-me-blurb {
  width: 100%;
}

.about-me-skills {
  display: grid;
  grid-template-columns: auto;
  gap: 1em;
  width: 100%;
}

.skills-container {
  display: flex;
  flex-direction: column;
  gap: 1em;
  width: 100%;
}

.skills-container > ul {
  display: grid;
  gap: 1em;
}

.skills-container > ul > li {
  background-color: var(--dark-colour-level-three);
  text-align: center;
  border-radius: 5px;
  box-shadow: 2px 2px 6px var(--dark-colour-shadow);
  padding: 1em;
}

.about-me-experience {
  width: 100%;
  padding-bottom: 0.5em;
}

.about-me-experience > h2, .about-me-education > h2 {
  font-style: italic;
  font-weight: 600;
  font-size: 2em;
  position: relative;
  bottom: 1.25em;
  left: 1em;
}

.about-me-experience > .experience-container, .education-flex-container > .education-container {
  background-color: var(--dark-colour-level-three);
  border-radius: 10px;
  padding: 1em ;
}

.experience-header > :nth-child(2), .education-header > :nth-child(2),
.experience-sub-header > :nth-child(2), .education-sub-header > :nth-child(2) {
  font-style: italic;
}

.experience-sub-header, .education-sub-header {
  font-size: 0.75em;
  margin: 0.5em 0;
}

.experience-sub-header, .education-sub-header {
  display: flex;
  justify-content: space-between;
}

.experience-container, .education-flex-container {
  position: relative;
  bottom: 1.25em;
}

.experience-container > ul {
  padding-left: 3em;
  list-style-type: square;
  font-size: 0.9em;
  font-family: 'Open Sans', sans-serif;
}

.about-me-education {
  width: 100%;
}

.about-me-experience, .about-me-education {
  margin-top: 2em;
}

.education-flex-container {
  display: flex;
  flex-direction: column;
  gap: 1em;
}

.portfolio-nav {
  background-color: unset;
  border-radius: 0px;
  box-shadow: unset;
}

.portfolio-nav > ul {
  display: flex;
  flex-wrap: wrap;
  gap: 1em;
}

.portfolio-nav > ul > li {
  background-color: var(--dark-colour-level-three);
  box-shadow: 0px 10px 6px -6px var(--dark-colour-shadow);
  padding: 0.75em 1em;
  border-radius: 15px;
}

.portfolio-nav > ul > li:first-child {
  background-color: #153C70;
}

.portfolio-container {
  display: flex;
  flex-direction: column;
  gap: 3em;
  background-color: unset;
  border-radius: 0;
  box-shadow: unset;
}

.portfolio-project-container {
  background-color: var(--dark-colour-level-two);
  border-radius: 30px;
  padding: 2em;
  box-shadow: 0px 10px 6px -6px var(--dark-colour-shadow);
  display: flex;
  flex-direction: column;
  gap: 1em;
}

.project-title {
  font-style: italic;
  font-weight: 600;
  font-size: 2em;
  position: relative;
  bottom: 1.25em;
  left: 1em;
}

.portfolio-image-container {
  width: 70%;
  background-color: var(--dark-colour-level-three);
  box-shadow: 0px 10px 6px -6px var(--dark-colour-shadow);
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 20px;
  align-self: center;
}

.portfolio-image-container > img {
  object-fit: cover;
  width: 100%;
  height: 100%;
  border-radius: 20px;
  box-shadow: 0px 10px 6px -6px var(--dark-colour-shadow);
}

.technologies-used {
  display: flex;
  flex-direction: column;
  gap: 1em;
}

.technologies-used >:first-child {
  font-weight: 600;
  font-size: 2em;
}

.technologies-used-container {
  display: flex;
  gap: 1em;
  flex-wrap: wrap;
}

.technologies-used-container > div {
  background-color: var(--dark-colour-level-three);
  box-shadow: 0px 10px 6px -6px var(--dark-colour-shadow);
  border-radius: 5px;
  padding: 1em;
}

.external-links {
  align-self: center;
  display: flex;
  gap: 2em;
}

.external-links img {
  width: 50px;
}

.external-links img:hover {
  opacity: 0.5;
}

.external-links a {
  text-decoration: none;
}

